syntax = "proto3";

package rs.ac.uns.ftn.grpc;
//option csharp_namespace = "PSW-backend.Protos";

message MessageProto {
	string message = 1;
	int64 randomInteger = 2;
	string medication = 3;
}

message MessageResponseProto {
	string response = 1;
	string status = 2;
	Medication medication = 3;
}

message Medication {
	int64 id = 1;
	string name = 2;
	int64 amount =3;
}